# bitcoin-newsletter

./: .deployment-trigger  .env.example  .env.render  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_RAILWAY.md  Dockerfile  LOCAL_TESTING_GUIDE.md  Procfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_TROUBLESHOOTING.md  WORKER_CONNECTIVITY_FIX.md  main.py  pyproject.toml  pytest.ini  railpack.json  railway.json  railway.toml  render.yaml  requirements.txt  start.sh  start_processes.py  test_event_loop_fix.py  test_newsletter_generation.py
.github/workflows/: test.yml
admin-dashboard/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
admin-dashboard/src/: App.tsx
admin-dashboard/src/components/common/: APITestPanel.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  RouterTest.tsx  StatusCard.tsx  StatusIndicator.tsx  SuspenseWrapper.tsx  index.ts
admin-dashboard/src/components/layout/: AppLayout.tsx  Breadcrumbs.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx  index.ts
admin-dashboard/src/components/newsletter/: NewsletterStatsCard.tsx
admin-dashboard/src/components/ui/: alert.tsx  badge.tsx  progress.tsx  separator.tsx
admin-dashboard/src/hooks/api/: useArticles.ts  useNewsletters.ts  useSystem.ts  (+1 more)
admin-dashboard/src/providers/: QueryProvider.tsx
admin-dashboard/src/routes/: AppRoutes.tsx
admin-dashboard/src/styles/: globals.css
admin-dashboard/src/utils/: env.ts
alembic/: env.py
alembic/versions/: 002_add_ai_agent_tables.py  003_add_batch_processing_tables.py  44078050e10e_initial_database_schema.py  4bd8b0c6ebc1_fix_autoincrement_for_primary_keys.py  4d07e8d47175_add_newsletter_progress_tracking.py  fix_newsletter_generation_date_timestamp.py
docker/: celery-beat.Dockerfile  celery-worker.Dockerfile  web.Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  CELERY_SETUP.md  CHANGELOG.md  CLI_USAGE.md  DAY_5_INVESTIGATION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  FASTAPI_API.md  FRONTEND_DEPLOYMENT.md  FRONTEND_SPECS.md  HANDOVER_NEXT_STEPS.md  IMMEDIATE_PRIORITIES_COMPLETION_SUMMARY.md  MONITORING.md  NEON_DATABASE_REFERENCE.md  NEWSLETTER_TESTING_STRATEGY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PRODUCTION_AUTH_FIX.md  PROJECT_OVERVIEW.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEVELOPMENT_GUIDE.md  RAILWAY_SETUP_COMPLETE.md  README.md  RENDER_DEPLOYMENT_SUCCESS.md  SIGNAL-ANALYSIS.md  TESTING.md
docs/PRDs/: batch_processing_newsletter_prd.md  core_data_pipeline_prd.md  core_pipeline_production_prd.md  monitoring_prompt_engineering_prd.md  newsletter_generation_publishing_prd.md  project_setup_dev_standards_prd.md  signal_detection_analysis_prd.md  updated_project_setup_prd.md
docs/PRDs/admin/: back_office_foundation_prd.md  simple_admin_dashboard_mvp_prd.md
docs/PRDs/batch_processing/: 01_batch_article_analysis_prd.md  02_newsletter_agents_system_prd.md  03_newsletter_database_schema_prd.md  04_newsletter_generation_tasks_prd.md  05_newsletter_publishing_system_prd.md  06_automated_scheduling_system_prd.md  07_quality_metrics_analytics_prd.md  BATCH_PROCESSING_DEVELOPMENT_STATUS.md  overarching_batch_processing_plan.md
docs/PRDs/signal-detection/: signal_detection_phase_1_prd.md  signal_detection_phase_2.5_prd.md  signal_detection_phase_2_prd.md  signal_detection_phase_3_prd.md  signal_detection_phase_4_prd.md  signal_detection_phase_5_prd.md
docs/prompts/: bitcoin_newsletter_meta_prompt.md  bitcoin_newsletter_meta_prompt_short.md
scripts/: check_phase_2_5_environment.py  db-manager.sh  deploy-production.sh  deploy-render.sh  deploy_railway.sh  deploy_worker_fix.py  dev-railway.sh  dev-start.sh  dev-workflow.sh  diagnose_production_issue.py  local_worker_test.py  monitor.sh  monitor_preview_deployment.py  monitor_production_deployment.py  newsletter_test_report_20250821_092915.json  newsletter_test_report_20250821_093133.json  phase_2_5_real_world_testing.py  phase_2_5_results_20250815_082841.json  phase_2_5_results_20250815_083004.json  phase_2_5_results_20250815_083149.json  phase_2_5_results_20250815_090521.json  phase_2_5_results_20250815_090629.json  select_test_articles.py  setup-dev.sh  setup_beat_database.py  start-redis.sh  test-railway-tasks.sh  test_analysis.py  test_batch_processing_script.py  test_database_storage.py  test_newsletter_agents.py  test_newsletter_database_integration.py  test_newsletter_implementation.py  test_phase_1_implementation.py  test_preview_environment.py  test_production_broker.py  test_pydantic_ai_integration.py  test_real_api_batch.py  test_real_batch_processing.py  test_worker_connectivity.py  (+2 more)
shared/: README.md
shared/types/: api.ts  common.ts
shared/utils/: api-helpers.ts  type-guards.ts
src/crypto_newsletter/analysis/: __init__.py  dependencies.py  scheduling.py  subprocess_runner.py  tasks.py
src/crypto_newsletter/cli/: main.py
src/crypto_newsletter/newsletter/: alerts.py  monitoring.py  storage.py  tasks.py
src/crypto_newsletter/scripts/: fix_language_detection.py
src/crypto_newsletter/shared/: django_minimal.py
src/crypto_newsletter/web/: __init__.py  main.py  middleware.py  models.py
tests/: conftest.py  test_runner.py
tests/analysis/: test_agents.py
tests/integration/: test_article_pipeline.py  test_batch_processing.py  test_celery_tasks.py  test_cli.py  test_fastapi_service.py
tests/unit/: test_article_processor.py  test_coindesk_client.py  test_deduplication.py  test_ingestion_pipeline.py  test_repository.py  test_settings.py
(+78 files in other folders)
